--- a/compose/compiler/compiler-hosted/build.gradle
+++ b/compose/compiler/compiler-hosted/build.gradle
@@ -23,6 +23,15 @@ plugins {
     id("kotlin")
 }
 
+allprojects {
+    repositories {
+        mavenLocal()
+        maven {
+            url "https://maven.pkg.jetbrains.space/kotlin/p/kotlin/dev/"
+        }
+    }
+}
+
 dependencies {
     compileOnly(libs.kotlinStdlib)
     compileOnly(libs.kotlinCompiler)
