--- a/compose/compiler/compiler/integration-tests/build.gradle
+++ b/compose/compiler/compiler/integration-tests/build.gradle
@@ -22,6 +22,15 @@ plugins {
     id("AndroidXPlugin")
 }
 
+allprojects {
+    repositories {
+        mavenLocal()
+        maven {
+            url "https://maven.pkg.jetbrains.space/kotlin/p/kotlin/dev/"
+        }
+    }
+}
+
 dependencies {
     implementation(libs.kotlinStdlib)
     testImplementation(libs.junit)
