--- a/compose/lint/common/build.gradle
+++ b/compose/lint/common/build.gradle
@@ -21,6 +21,15 @@ plugins {
     id("kotlin")
 }
 
+allprojects {
+    repositories {
+        mavenLocal()
+        maven {
+            url "https://maven.pkg.jetbrains.space/kotlin/p/kotlin/dev/"
+        }
+    }
+}
+
 dependencies {
     compileOnly(libs.androidLintMinComposeApi)
     compileOnly(libs.kotlinStdlib)
