--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,9 +34,9 @@ guavaJre = "31.1-jre"
 hilt = "2.44"
 incap = "0.2"
 jcodec = "0.2.5"
-kotlin = "1.7.20"
+kotlin = "1.8.255-SNAPSHOT"
 kotlinBenchmark = "0.4.5"
-kotlinNative = "1.7.20"
+kotlinNative = "1.8.20-dev-980"
 kotlinCompileTesting = "1.4.9"
 kotlinCoroutines = "1.6.4"
 kotlinSerialization = "1.3.3"
