--- a/lint-checks/build.gradle
+++ b/lint-checks/build.gradle
@@ -22,6 +22,15 @@ plugins {
     id("kotlin")
 }
 
+allprojects {
+    repositories {
+        mavenLocal()
+        maven {
+            url "https://maven.pkg.jetbrains.space/kotlin/p/kotlin/dev/"
+        }
+    }
+}
+
 sourceSets {
     // Pull integration test source code in for use by lint testing framework.
     test.resources.srcDirs(
