--- a/playground-common/androidx-shared.properties
+++ b/playground-common/androidx-shared.properties
@@ -24,6 +24,8 @@
 # This separation is necessary to ensure gradle can read certain properties
 # at configuration time.
 
+org.gradle.dependency.verification=off
+
 org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC -XX:MaxMetaspaceSize=512m -Dkotlin.daemon.jvm.options=-XX:MaxMetaspaceSize=1g -Dlint.nullness.ignore-deprecated=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
